--- a/src/styles/sass/mapbox.scss
+++ b/src/styles/sass/mapbox.scss
@@ -2,7 +2,8 @@
   display: flex;
   justify-content: center;
   width: 90%;
-  margin: 2% auto;
+  margin: 0 auto;
+  padding: 3rem;
 
   .fullScreenControl {
     position: absolute;
@@ -186,4 +187,14 @@
       font-weight: 400;
     }
   }
+}
+.overlays {
+  border: 3px solid #161345;
+  box-shadow: 0px 2px 30px 0px #13113e;
+}
+.map_container {
+  background-image: URL('../imgs/itote-rubombora-8PF8fl6e6yE-unsplash.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
 }
