--- a/src/styles/sass/nav.scss
+++ b/src/styles/sass/nav.scss
@@ -5,7 +5,7 @@
   height: 13vh;
   padding: 0 5%;
   margin: 0%;
-  border-bottom: 1px solid #d6d1ca;
+  border-bottom: 4px solid #161345;
 
   .logo {
     display: flex;
