--- a/src/styles/sass/nav.scss
+++ b/src/styles/sass/nav.scss
@@ -5,7 +5,8 @@
   height: 13vh;
   padding: 0 5%;
   margin: 0%;
-  border-bottom: 4px solid #161345;
+  background-color: #161345;
+  border-bottom: 3px solid white;
 
   .logo {
     display: flex;
@@ -22,7 +23,7 @@
     h1 {
       display: flex;
       align-self: flex-end;
-      color: #161345;
+      color: white;
       font-size: 2.2vw;
       margin: 0;
       font-family: 'bridge-font-bd';
@@ -40,7 +41,7 @@
     width: 40%;
 
     .navLinks {
-      color: #161345;
+      color: white;
       font-size: 1.5vw;
       font-family: 'bridge-font';
       font-weight: 700;
