--- a/src/styles/sass/mapbox.scss
+++ b/src/styles/sass/mapbox.scss
@@ -20,28 +20,39 @@
   }
 
   .detailsContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     position: absolute;
     z-index: 10;
-
     margin: 8% 6% 0 0;
     right: 0;
     top: 0;
     cursor: move;
-    width: 25vw;
-    background-color: white;
-    box-shadow: 2px 1px 5px 0px rgba(148, 142, 148, 1);
+    color: whitesmoke;
+    background-color: grey;
+    box-shadow: 0px 2px 30px 0px rgba(148, 142, 148, 1);
 
-    div {
-      background-color: white;
-      border: none;
-      font-size: 1rem;
-      margin-left: 3%;
-      margin-top: 1%;
-      width: auto;
+    .closeArea {
+      display: flex;
+      justify-content: flex-end;
+      width: 100%;
+      text-align: right;
+
     }
 
+    .close_button {
+    border: 1px solid #161345;
+    width: 30%;
+    text-align: center;
+
+
+    }
     .closeButton:hover {
       cursor: pointer;
+
+
     }
 
     .detailsInfo {
@@ -49,13 +60,19 @@
       display: flex;
       align-items: center;
       flex-direction: column;
+      color: whitesmoke;
+      background-color: grey;
+
       .bridge-image {
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        box-shadow: 0px 2px 30px 0px rgba(148, 142, 148, 1);
+
         img {
-          width: 300px;
+          height: 100%;
+          width: 100%;
         }
         p {
           font-size: 0.5rem;
@@ -197,4 +214,8 @@
   background-repeat: no-repeat;
   background-size: cover;
   height: 100%;
+}
+
+#card_content{
+  background-color: #161345;
 }
