added bridge unavailable message

--- a/src/styles/sass/mapbox.scss
+++ b/src/styles/sass/mapbox.scss
@@ -219,3 +219,10 @@
 #card_content{
   background-color: #161345;
 }
+
+.no-bridge-image{
+  padding: .5rem;
+  text-align: center;
+  color: #009149;
+  font-family: 'bridge-font-bd';
+}
