--- a/src/styles/sass/mapbox.scss
+++ b/src/styles/sass/mapbox.scss
@@ -31,7 +31,6 @@
     top: 0;
     cursor: move;
     color: whitesmoke;
-    background-color: grey;
     box-shadow: 0px 2px 30px 0px rgba(148, 142, 148, 1);
 
     .closeArea {
@@ -46,6 +45,7 @@
     border: 1px solid #161345;
     width: 30%;
     text-align: center;
+    margin: 2px;
 
 
     }
@@ -61,7 +61,7 @@
       align-items: center;
       flex-direction: column;
       color: whitesmoke;
-      background-color: grey;
+      // background-color: grey;
 
       .bridge-image {
         display: flex;
@@ -168,7 +168,7 @@
     .detailsContainer {
       margin: 250px 4% 0 0;
 
-      width: 50%;
+      width: auto;
       cursor: move;
 
       div {
@@ -225,4 +225,11 @@
   text-align: center;
   color: #009149;
   font-family: 'bridge-font-bd';
+}
+#card_media {
+  width: 100%;
+}
+
+#bridge_name_text {
+  width: 200px;
 }
