added graph to bridge details card

--- a/src/styles/sass/mapbox.scss
+++ b/src/styles/sass/mapbox.scss
@@ -221,3 +221,10 @@
 #card_content {
   background-color: #161345;
 }
+.graph {
+  height: auto;
+  width: auto;
+}
+.graphDiv {
+  width: 200px;
+}
