More adjustments to make the card look more balanced with the addition of the chart

--- a/src/styles/sass/mapbox.scss
+++ b/src/styles/sass/mapbox.scss
@@ -243,6 +243,17 @@
   font-family: 'bridge-font-bd';
 }
 #card_media {
+  min-height: 200px;
   width: 100%;
+}
+
+.bottom_info{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.bottom_info_cols{
+  width: 45%;
+
 }
 
