--- a/src/styles/sass/mapbox.scss
+++ b/src/styles/sass/mapbox.scss
@@ -42,7 +42,7 @@
 
     .close_button {
 
-    border: 1px solid #161345;
+    border: 1px solid hotpink;
     width: 30%;
     text-align: center;
     margin: 2px;
@@ -156,15 +156,22 @@
         margin: 45px 0 0 0;
       }
       .check-box {
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+        font-size: medium;
+        color: black;
         margin: 100px 0 0 0;
-        width: 390px;
-        height: 120px;
+        width: 100px;
+        height: 370px;
+        display: flex;
+        flex-direction: column;
 
         .check-box-section {
-          width: 100%;
+          width: 10%;
           display: flex;
+          flex-direction: column;
           justify-content: flex-start;
-          flex-wrap: wrap;
           font-size: 0.8rem;
 
           .restricted {
@@ -247,6 +254,6 @@
 }
 #bridge_name_intro{
   font-size: medium;
-  margin-right: 2px;
+  margin-right: 2pxç;
 }
 
